--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -45,6 +45,12 @@ body{
     font-size: larger;
     color: aqua;
 }
+.myimage{
+    height: 10%;
+    width: fit-content;
+    border-radius: 1vh;
+    border-color: teal;
+}
 
 @media screen and (max-width: 768px) {
     .cardsize{
