readme and content added

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 0;
+    margin-bottom: 4vh;
     padding: 0; 
     position: relative;
 }
